// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/Color Backgrounds 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f9f9f9",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--background-color-primary)
      </span>
      <span
        className="label"
      >
        #f9f9f9
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fcfdfd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--background-color-primary-highlight)
      </span>
      <span
        className="label"
      >
        #fcfdfd
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Base 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#000",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-base-black)
      </span>
      <span
        className="label"
      >
        #000
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-base-white)
      </span>
      <span
        className="label"
      >
        #fff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-base-transparent)
      </span>
      <span
        className="label"
      >
        transparent
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Blue 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eff6ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-50)
      </span>
      <span
        className="label"
      >
        #eff6ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#dbeafe",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-100)
      </span>
      <span
        className="label"
      >
        #dbeafe
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#bfdbfe",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-200)
      </span>
      <span
        className="label"
      >
        #bfdbfe
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#93c5fd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-300)
      </span>
      <span
        className="label"
      >
        #93c5fd
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#60a5fa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-400)
      </span>
      <span
        className="label"
      >
        #60a5fa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#3b82f6",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-500)
      </span>
      <span
        className="label"
      >
        #3b82f6
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2563eb",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-600)
      </span>
      <span
        className="label"
      >
        #2563eb
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#1d4ed8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-700)
      </span>
      <span
        className="label"
      >
        #1d4ed8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#1e40af",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-800)
      </span>
      <span
        className="label"
      >
        #1e40af
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#1e3a8a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-blue-900)
      </span>
      <span
        className="label"
      >
        #1e3a8a
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Brand 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7559d1",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-slate-blue)
      </span>
      <span
        className="label"
      >
        #7559d1
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9879e9",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-medium-purple)
      </span>
      <span
        className="label"
      >
        #9879e9
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eff1fd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-blue-moon)
      </span>
      <span
        className="label"
      >
        #eff1fd
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eb2d52",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-amaranth)
      </span>
      <span
        className="label"
      >
        #eb2d52
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eb4e58",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-mandy)
      </span>
      <span
        className="label"
      >
        #eb4e58
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#455970",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-east-bay)
      </span>
      <span
        className="label"
      >
        #455970
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7e858c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-regent-gray)
      </span>
      <span
        className="label"
      >
        #7e858c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b7b7b7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-loblolly)
      </span>
      <span
        className="label"
      >
        #b7b7b7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e8e8e8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-white-lilac)
      </span>
      <span
        className="label"
      >
        #e8e8e8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f9f9f9",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-hint-of-red)
      </span>
      <span
        className="label"
      >
        #f9f9f9
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fcfdfd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-romance)
      </span>
      <span
        className="label"
      >
        #fcfdfd
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#00e5a8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-brand-medium-spring-green)
      </span>
      <span
        className="label"
      >
        #00e5a8
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Decisions 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9879e9",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-primary)
      </span>
      <span
        className="label"
      >
        #9879e9
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7559d1",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-primary-muted)
      </span>
      <span
        className="label"
      >
        #7559d1
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eff1fd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-primary-highlight)
      </span>
      <span
        className="label"
      >
        #eff1fd
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fcfdfd",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-primary-inverted)
      </span>
      <span
        className="label"
      >
        #fcfdfd
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#455970",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-font-base)
      </span>
      <span
        className="label"
      >
        #455970
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7e858c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-font-muted)
      </span>
      <span
        className="label"
      >
        #7e858c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b7b7b7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-font-highlight)
      </span>
      <span
        className="label"
      >
        #b7b7b7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-font-inverted)
      </span>
      <span
        className="label"
      >
        #fff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eb2d52",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-secondary)
      </span>
      <span
        className="label"
      >
        #eb2d52
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eb4e58",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-secondary-muted)
      </span>
      <span
        className="label"
      >
        #eb4e58
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fecdd3",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-secondary-highlight)
      </span>
      <span
        className="label"
      >
        #fecdd3
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-secondary-inverted)
      </span>
      <span
        className="label"
      >
        #fff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#00e5a8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-tertiary)
      </span>
      <span
        className="label"
      >
        #00e5a8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#34d399",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-tertiary-muted)
      </span>
      <span
        className="label"
      >
        #34d399
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#a7f3d0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-tertiary-highlight)
      </span>
      <span
        className="label"
      >
        #a7f3d0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-tertiary-inverted)
      </span>
      <span
        className="label"
      >
        #fff
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9879e9",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-primary)
      </span>
      <span
        className="label"
      >
        #9879e9
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Gray 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fafafa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-50)
      </span>
      <span
        className="label"
      >
        #fafafa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f4f4f5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-100)
      </span>
      <span
        className="label"
      >
        #f4f4f5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e4e4e7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-200)
      </span>
      <span
        className="label"
      >
        #e4e4e7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#d4d4d8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-300)
      </span>
      <span
        className="label"
      >
        #d4d4d8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#a1a1aa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-400)
      </span>
      <span
        className="label"
      >
        #a1a1aa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#71717a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-500)
      </span>
      <span
        className="label"
      >
        #71717a
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#52525b",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-600)
      </span>
      <span
        className="label"
      >
        #52525b
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#3f3f46",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-700)
      </span>
      <span
        className="label"
      >
        #3f3f46
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#27272a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-800)
      </span>
      <span
        className="label"
      >
        #27272a
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#18181b",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-gray-900)
      </span>
      <span
        className="label"
      >
        #18181b
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Green 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f0fdf4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-50)
      </span>
      <span
        className="label"
      >
        #f0fdf4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#dcfce7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-100)
      </span>
      <span
        className="label"
      >
        #dcfce7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#bbf7d0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-200)
      </span>
      <span
        className="label"
      >
        #bbf7d0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#86efac",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-300)
      </span>
      <span
        className="label"
      >
        #86efac
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4ade80",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-400)
      </span>
      <span
        className="label"
      >
        #4ade80
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#22c55e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-500)
      </span>
      <span
        className="label"
      >
        #22c55e
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#16a34a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-600)
      </span>
      <span
        className="label"
      >
        #16a34a
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#15803d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-700)
      </span>
      <span
        className="label"
      >
        #15803d
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#166534",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-800)
      </span>
      <span
        className="label"
      >
        #166534
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#14532d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-green-900)
      </span>
      <span
        className="label"
      >
        #14532d
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Indigo 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eef2ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-50)
      </span>
      <span
        className="label"
      >
        #eef2ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e0e7ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-100)
      </span>
      <span
        className="label"
      >
        #e0e7ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c7d2fe",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-200)
      </span>
      <span
        className="label"
      >
        #c7d2fe
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#a5b4fc",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-300)
      </span>
      <span
        className="label"
      >
        #a5b4fc
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#818cf8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-400)
      </span>
      <span
        className="label"
      >
        #818cf8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#6366f1",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-500)
      </span>
      <span
        className="label"
      >
        #6366f1
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4f46e5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-600)
      </span>
      <span
        className="label"
      >
        #4f46e5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#4338ca",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-700)
      </span>
      <span
        className="label"
      >
        #4338ca
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#3730a3",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-800)
      </span>
      <span
        className="label"
      >
        #3730a3
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#312e81",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-indigo-900)
      </span>
      <span
        className="label"
      >
        #312e81
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Orange 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff7ed",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-50)
      </span>
      <span
        className="label"
      >
        #fff7ed
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ffedd5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-100)
      </span>
      <span
        className="label"
      >
        #ffedd5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fed7aa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-200)
      </span>
      <span
        className="label"
      >
        #fed7aa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fdba74",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-300)
      </span>
      <span
        className="label"
      >
        #fdba74
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fb923c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-400)
      </span>
      <span
        className="label"
      >
        #fb923c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f97316",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-500)
      </span>
      <span
        className="label"
      >
        #f97316
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ea580c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-600)
      </span>
      <span
        className="label"
      >
        #ea580c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c2410c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-700)
      </span>
      <span
        className="label"
      >
        #c2410c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9a3412",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-800)
      </span>
      <span
        className="label"
      >
        #9a3412
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7c2d12",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-orange-900)
      </span>
      <span
        className="label"
      >
        #7c2d12
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Pink 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fdf2f8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-50)
      </span>
      <span
        className="label"
      >
        #fdf2f8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fce7f3",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-100)
      </span>
      <span
        className="label"
      >
        #fce7f3
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fbcfe8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-200)
      </span>
      <span
        className="label"
      >
        #fbcfe8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f9a8d4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-300)
      </span>
      <span
        className="label"
      >
        #f9a8d4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f472b6",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-400)
      </span>
      <span
        className="label"
      >
        #f472b6
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ec4899",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-500)
      </span>
      <span
        className="label"
      >
        #ec4899
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#db2777",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-600)
      </span>
      <span
        className="label"
      >
        #db2777
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#be185d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-700)
      </span>
      <span
        className="label"
      >
        #be185d
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9d174d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-800)
      </span>
      <span
        className="label"
      >
        #9d174d
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#831843",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-pink-900)
      </span>
      <span
        className="label"
      >
        #831843
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Purple 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#faf5ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-50)
      </span>
      <span
        className="label"
      >
        #faf5ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f3e8ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-100)
      </span>
      <span
        className="label"
      >
        #f3e8ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#e9d5ff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-200)
      </span>
      <span
        className="label"
      >
        #e9d5ff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#d8b4fe",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-300)
      </span>
      <span
        className="label"
      >
        #d8b4fe
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#c084fc",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-400)
      </span>
      <span
        className="label"
      >
        #c084fc
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#a855f7",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-500)
      </span>
      <span
        className="label"
      >
        #a855f7
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#9333ea",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-600)
      </span>
      <span
        className="label"
      >
        #9333ea
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7e22ce",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-700)
      </span>
      <span
        className="label"
      >
        #7e22ce
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#6b21a8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-800)
      </span>
      <span
        className="label"
      >
        #6b21a8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#581c87",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-purple-900)
      </span>
      <span
        className="label"
      >
        #581c87
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Red 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fef2f2",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-50)
      </span>
      <span
        className="label"
      >
        #fef2f2
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fee2e2",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-100)
      </span>
      <span
        className="label"
      >
        #fee2e2
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fecaca",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-200)
      </span>
      <span
        className="label"
      >
        #fecaca
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fca5a5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-300)
      </span>
      <span
        className="label"
      >
        #fca5a5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f87171",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-400)
      </span>
      <span
        className="label"
      >
        #f87171
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ef4444",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-500)
      </span>
      <span
        className="label"
      >
        #ef4444
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#dc2626",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-600)
      </span>
      <span
        className="label"
      >
        #dc2626
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#b91c1c",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-700)
      </span>
      <span
        className="label"
      >
        #b91c1c
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#991b1b",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-800)
      </span>
      <span
        className="label"
      >
        #991b1b
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7f1d1d",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-red-900)
      </span>
      <span
        className="label"
      >
        #7f1d1d
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Teal 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#f0fdfa",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-50)
      </span>
      <span
        className="label"
      >
        #f0fdfa
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ccfbf1",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-100)
      </span>
      <span
        className="label"
      >
        #ccfbf1
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#99f6e4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-200)
      </span>
      <span
        className="label"
      >
        #99f6e4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#5eead4",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-300)
      </span>
      <span
        className="label"
      >
        #5eead4
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2dd4bf",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-400)
      </span>
      <span
        className="label"
      >
        #2dd4bf
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#14b8a6",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-500)
      </span>
      <span
        className="label"
      >
        #14b8a6
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#0d9488",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-600)
      </span>
      <span
        className="label"
      >
        #0d9488
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#0f766e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-700)
      </span>
      <span
        className="label"
      >
        #0f766e
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#115e59",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-800)
      </span>
      <span
        className="label"
      >
        #115e59
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#134e4a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-teal-900)
      </span>
      <span
        className="label"
      >
        #134e4a
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Yellow 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fefce8",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-50)
      </span>
      <span
        className="label"
      >
        #fefce8
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fef9c3",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-100)
      </span>
      <span
        className="label"
      >
        #fef9c3
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fef08a",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-200)
      </span>
      <span
        className="label"
      >
        #fef08a
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fde047",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-300)
      </span>
      <span
        className="label"
      >
        #fde047
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#facc15",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-400)
      </span>
      <span
        className="label"
      >
        #facc15
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#eab308",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-500)
      </span>
      <span
        className="label"
      >
        #eab308
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#ca8a04",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-600)
      </span>
      <span
        className="label"
      >
        #ca8a04
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#a16207",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-700)
      </span>
      <span
        className="label"
      >
        #a16207
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#854d0e",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-800)
      </span>
      <span
        className="label"
      >
        #854d0e
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#713f12",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--color-yellow-900)
      </span>
      <span
        className="label"
      >
        #713f12
      </span>
    </div>
  </div>
</div>
`;
